@@ -45,6 +45,9 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Bug #876637, prevent stack corruption when socket descriptor
+  is larger than FD_SETSIZE.
+
 - Patch #1407135, bug #1424041: mmap.mmap(-1, size, ...) can return
   anonymous memory again on Unix.
 
